--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.6.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "swiper": "^9.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
